Fix mobile language/theme switching and notifications
- Fixed language switching on mobile devices - now properly redirects through Django i18n
- Fixed theme change notifications display on mobile
- Removed blue outline on language/theme buttons for mobile (added outline:none and -webkit-tap-highlight-color)
- Fixed active language button state detection (support for lang codes like 'ru-RU')
- Updated mobile-menu.js to integrate with global LanguageManager and ThemeManager
- Improved notification display with proper language detection

--- a/src/core/templates/base.html
+++ b/src/core/templates/base.html
@@ -88,10 +88,10 @@
 
     <!-- JavaScript -->
     <script src="{% static 'js/core/loading.js' %}"></script>
-    <script src="{% static 'js/core/main.js' %}" defer></script>
-    <script src="{% static 'js/core/desktop-nav.js' %}" defer></script>
-    <script src="{% static 'js/core/mobile-menu.js' %}" defer></script>
-    <script src="{% static 'js/core/messages.js' %}" defer></script>
+    <script src="{% static 'js/core/main.js' %}"></script>
+    <script src="{% static 'js/core/desktop-nav.js' %}"></script>
+    <script src="{% static 'js/core/mobile-menu.js' %}"></script>
+    <script src="{% static 'js/core/messages.js' %}"></script>
 
     <!-- Extra JavaScript for specific pages -->
     {% block extra_js %}{% endblock %}
